# governor

./: .pylintrc  LICENSE copy  README.md  _setup.cfg  pyproject.toml
governor/io/: __init__.py  config.py  types.py
governor/objects/: network.py  operator.py  types.py
governor/runtime/: __init__.py  api.py  controller.py  job.py  memory.py  multiprocessing.py  server.py  ui.py
governor/utils/: helpers.py
runpy/: __init__.py
runpy/io/: config.py  types.py
runpy/objects/: network.py  operator.py
scripts/: run_controller.py
tests/: Governor.ipynb  config.yaml  config_multi_base_test.yaml  config_multiproc_function.yaml  config_multiproc_test.yaml  config_multiproc_test_simple.yaml  config_single_base_test.yaml
tests/test_modules/operators/: class_based.py  native_based.py  native_multiproc_based.py
ui/: angular.json  package-lock.json  package.json
ui/src/: custom-theme.scss  index.html
ui/src/app/: app.component.html  app.component.sass  app.component.ts  app.module.ts
