[tool.poetry]
name = "governor"
version = "0.0.1"
description = "A light and flexible orchestrator of any local or distributed Python code."
authors = ["Manuel Proissl <mproissl@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://mproissl.github.io/runpy/"
repository = "https://github.com/mproissl/runpy"
keywords = [
    "orchestration",
    "automation",
    "executor",
    "runtime"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
include = [
    { path = "governor/ui", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
uvicorn = "^0.20"
starlette = "^0.23"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
